Atualização (Adição da busca pelo saldo)
